--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superblocksteam/dynamodb",
-  "version": "0.1692.0",
+  "version": "0.1753.0",
   "description": "Superblocks DynamoDB Plugin",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -26,9 +26,11 @@
     "@superblocksteam/shared": "^0.x",
     "@superblocksteam/shared-backend": "^0.x",
     "aws-sdk": "2.1084.0",
+    "deasync": "0.1.26",
     "minimist": "1.2.6"
   },
   "devDependencies": {
+    "@types/jest": "26.0.24",
     "@types/node": "14.14.22",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
@@ -38,13 +40,12 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "3.3.1",
     "husky": "^4.3.8",
+    "jest": "26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "2.2.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.2.3",
-    "jest": "26.6.3",
-    "@types/jest": "26.0.24",
-    "ts-jest": "26.5.6"
+    "ts-jest": "26.5.6",
+    "typescript": "^4.2.3"
   },
   "husky": {
     "hooks": {
